implemented snake and food item and snake move functionality

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
       <div class="game-boarder-1">
         <div class="game-boarder-2">
           <div class="game-boarder-3">
-            <div class="game-board"></div>
+            <div class="game-board" id="game-board"></div>
           </div>
         </div>
-        <h1 id="instruction-text">Press spacebar to start the game</h1>
-        <img id="logo" src="./images/snake.png" alt="snake" />
+        <!-- <h1 id="instruction-text">Press spacebar to start the game</h1>
+        <img id="logo" src="./images/snake.png" alt="snake" /> -->
       </div>
     </div>
+
+    <script src="./js/index.js"></script>
   </body>
 </html>
