--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="game-board" id="game-board"></div>
           </div>
         </div>
-        <!-- <h1 id="instruction-text">Press spacebar to start the game</h1>
-        <img id="logo" src="./images/snake.png" alt="snake" /> -->
+        <h1 id="instruction-text">Press spacebar to start the game</h1>
+        <img id="logo" src="./images/snake.png" alt="snake" />
       </div>
     </div>
 
