added colosion, reset, updateScore functionalities

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <div>
       <div class="scores">
-        <h1 class="scores--current">000</h1>
-        <h1 class="scores--highscore">000</h1>
+        <h1 class="scores--current" id="score">000</h1>
+        <h1 class="scores--highscore" id="highScore">000</h1>
       </div>
       <div class="game-boarder-1">
         <div class="game-boarder-2">
