hidden snake and food elements after game stops

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             <div class="game-board" id="game-board"></div>
           </div>
         </div>
-        <h1 id="instruction-text">Press spacebar to start the game</h1>
-        <img id="logo" src="./images/snake.png" alt="snake" />
+        <div class="caption">
+          <h1 id="instruction-text">Press spacebar to start the game</h1>
+          <img id="logo" src="./images/snake.png" alt="snake" />
+        </div>
       </div>
     </div>
 
